[package]
name = "solis-delay"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["now", "serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
envy = "0.4.2"
hmac = "0.12.1"
log = "0.4.29"
md5 = "0.8.0"
reqwest = { version = "0.12.24", features = ["blocking", "rustls-tls"], default-features = false }
serde = "1.0.228"
serde_json = "1.0.145"
serde_repr = "0.1.20"
sha1 = "0.10.6"
signal-hook = "0.3.18"

[profile.release]
strip = true
opt-level = "z"
lto = true
